# TypeGame

./: CMakeLists.txt  README.md  main.cpp
Game/: GameEngine.cpp  GameEngine.h  GameLogics.cpp  GameLogics.h  GameTick.cpp  GameTick.h
Game/Handlers/: GameCreateListener.cpp  GameCreateListener.h  GameTickListener.cpp  GameTickListener.h  IntervalTickSendHandler.cpp  IntervalTickSendHandler.h
Game/Packets/: GameCreatePacket.cpp  GameCreatePacket.h  GameTickPacket.cpp  GameTickPacket.h
UI/: GameWindow.cpp  GameWindow.h  MainWindow.cpp  MainWindow.h  SinglePlayerWIndow.cpp  SinglePlayerWIndow.h
VNet/Packet/: PacketBuilder.h
